# LSD-VIS

./: CMakeLists.txt  README.md  create_notes.py  main.c
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  music_sequencer.sln  music_sequencer.vcxproj  music_sequencer.vcxproj.filters
build_vs/Release/: sound_server.py
build_vs/music_sequencer.dir/Release/: music_sequencer.exe.recipe
build_vs/music_sequencer.dir/Release/music_sequencer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
shaders/: fragment.glsl  vertex.glsl
src/: main.c
